--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,6 +96,10 @@ video {
 	vertical-align: baseline;
 }
 
+.pages{
+	text-align: center;
+}
+
 article,
 aside,
 details,
@@ -2702,13 +2706,26 @@ button:disabled,
 
 .projects {
 	margin-left: 42%;
-	margin-right: 42%;
-	width: 8em;
+	margin-right: 43%;
+	width: 5em;
+	margin-top: 55px;
 }
 
 .about-me {
+	text-align: center;
 	padding: 20px;
-	margin: 20px;
+	margin: 5px;
+	padding-bottom: 2%;
+}
+
+
+
+p {
+	text-indent: 50px;
+	/* width: 500px; */
+	text-align: justify;
+	padding-left: 25%;
+	padding-right: 25%;
 }
 
 .contact-button {
@@ -2841,11 +2858,17 @@ button:disabled,
 .screenshots {
 	border-image: auto;
 	height: 400px;
-	width: 400px;
-	border: 1px bold red;
+	width: 550px;
+	border: 4px solid black;
 }
 
-.projects {}
+.screenshots:hover{
+	height: 450px;
+	width: 600px;
+	box-shadow: 10px 10px 10px grey;
+}
+
+/* .projects {} */
 
 .message-sent {
 	margin: auto;
